# ReflectBoard

./: .env.example  .gitignore  README.md  docker-compose.prod.yaml  docker-compose.yaml  tz.md
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/db/: session.py
backend/app/models/: activity.py
bot/: pyproject.toml  settings.example.toml
bot/bot/: __main__.py  config.py  fastapi_client.py  logging_config.py
bot/bot/ai/: anthropic_provider.py  base.py  openai_provider.py
bot/bot/db/: models.py
bot/bot/handlers/: __init__.py  add.py  analyze.py  link.py  settings.py  start.py  stats.py  unlink.py
bot/bot/middlewares/: user.py
bot/bot/repositories/: bot_settings.py  user.py
bot/bot/scheduler/: __init__.py  _common.py  deadlines.py  reminders.py
docs/: api.md  architecture.md
docs/features/: analytics.md  board.md  done.md  tg-ai.md
fastapi/: .dockerignore  .env.example  Dockerfile  pyproject.toml  seeds.py
fastapi/app/: main.py
fastapi/app/api/v1/: activity.py  analytics.py  category.py  health.py  websocket.py
fastapi/app/core/: config.py
fastapi/app/db/: redis.py  session.py
fastapi/app/dependencies/: auth.py
fastapi/app/models/: __init__.py  activity.py  category.py  user.py
fastapi/app/schemas/: activity.py  category.py
fastapi/app/services/: activity_service.py  analytics_service.py  category_service.py  redis_service.py
fastapi/migrations/: env.py
fastapi/tests/: conftest.py  test_activities.py  test_analytics.py  test_categoties.py  test_done_activities.py  test_log_time.py  test_serialization.py  test_streak_subtasks_reorder.py  test_ws.py
laravel/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  phpunit.xml  vite.config.js
laravel/bootstrap/: app.php
laravel/config/: database.php  (+1 more)
mysql-conf/: reflectboard.cnf
sql-init/: init-databases.sql
(+69 files in other folders)
