[project]
name = "reflectboard-bot"
version = "0.1.0"
description = "Telegram bot for ReflectBoard"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiomysql>=0.2",
    "cryptography>=40.0",
    "redis>=5.0",
]
